# Hephaestus

./: .gitignore  LowData World Builder alias  README.md  compileGames.sh  compileGames.zsh  installDependencies.sh
Binaries/: CMakeCache.txt
Clion/Olympus/: CMakeLists.txt  main.cpp
Clion/Olympus copy/: main.cpp
Clion/Olympus copy/Hephaestus/: CMakeLists.txt  Hephaestus.hpp
Clion/Olympus copy/Hephaestus/Classes/Controls/: Controls.hpp
Clion/Olympus copy/Hephaestus/Classes/Geometry Manager/: GeometryManager.hpp
Clion/Olympus copy/Hephaestus/Classes/Geometry Manager/Sprite/: Sprite.cpp  Sprite.hpp
Clion/Olympus copy/Hephaestus/Classes/Window/: Window.hpp
Clion/Olympus/Hephaestus/: CMakeLists.txt  Hephaestus.cpp  Hephaestus.hpp
Clion/Olympus/Hephaestus/Shader/: Shader.cpp  Shader.hpp
Clion/Olympus/Hephaestus/Sprite/: Sprite.cpp  Sprite.hpp
Clion/Olympus/Hephaestus/Window/: Window.cpp  Window.hpp
Engine/API/: CMakeLists.txt  Hephaestus.cpp  Hephaestus.hpp
GameOfLife/: CMakeLists.txt  main.cpp  mainLevelScene.cpp  mainLevelScene.hpp
GameOfLife/lib/hephaestus/include/: Hephaestus.hpp
GameOfLife/lib/hephaestus/include/AudioEngine/: AudioEngine.hpp  AudioSnippet.hpp
GameOfLife/lib/hephaestus/include/Camera/: Camera.hpp
GameOfLife/lib/hephaestus/include/Collision/: Collision.hpp
GameOfLife/lib/hephaestus/include/Controls/Keybind/: Keybind.hpp
GameOfLife/lib/hephaestus/include/Scene/: Scene.hpp
GameOfLife/lib/hephaestus/include/Shader/: Shader.hpp
GameOfLife/lib/hephaestus/include/UI/: UIElement.hpp
GameOfLife/lib/hephaestus/include/UI/Button/: Button.hpp
GameOfLife/lib/hephaestus/include/Window/: Window.hpp
GameOfLife/lib/hephaestus/include/Window/Sprite/: Sprite.hpp
GameOfLife/lib/hephaestus/include/Window/Sprite/PhysicsSprite/: PhysicsSprite.hpp
GameOfLife/lib/hephaestus/include/Window/Text/: Text.hpp  TextManager.hpp
GameOfLife/lib/hephaestus/include/Window/UI/: UIElement.hpp
GameOfLife/lib/hephaestus/include/Window/UI/Button/: Button.hpp
Games/GameOfLife/: main.cpp  (+1 more)
Hephaestus/: CMakeLists.txt  Hephaestus.cpp  HephaestusUtility.hpp
Hephaestus-C/Hephaestus/: CMakeLists.txt
Hephaestus-C/Hephaestus/resources/: shader.frag
Hephaestus-C/Hephaestus/resources/Shaders/Common/: shader.frag  shader.vert
Hephaestus-C/Hephaestus/src/: main.cpp  shader.vert
Hephaestus-C/Hephaestus/src/Classes/Controls/: Controls.cpp  Controls.hpp
Hephaestus-C/Hephaestus/src/Classes/Controls/Keybind/: Keybind.hpp
Hephaestus-C/Hephaestus/src/Classes/Geometry Manager/: GeometryManager.cpp  GeometryManager.hpp
Hephaestus-C/Hephaestus/src/Classes/Geometry Manager/Compressed Data/: CompressedData.hpp
Hephaestus-C/Hephaestus/src/Classes/Geometry Manager/Geometry Buffer/: GeometryBuffer.cpp  GeometryBuffer.hpp
Hephaestus-C/Hephaestus/src/Classes/Geometry Manager/Shapes/Cube/: Cube.hpp
Hephaestus-C/Hephaestus/src/Classes/Geometry Manager/Sprite/: Sprite.cpp  Sprite.hpp
Hephaestus-C/Hephaestus/src/Classes/Geometry Manager/Sprite Renderer/: SpriteRenderer.cpp  SpriteRenderer.hpp
Hephaestus-C/Hephaestus/src/Classes/Geometry Manager/Sprite Renderer/Sprite/: Sprite.cpp  Sprite.hpp
Hephaestus-C/Hephaestus/src/Classes/Geometry Manager/Vertex/: Vertex.cpp  Vertex.hpp
Hephaestus-C/Hephaestus/src/Classes/Shader/: Shader.cpp  Shader.hpp
Hephaestus-C/Hephaestus/src/Classes/Triangle/: Triangle.cpp  Triangle.hpp
Hephaestus-C/Hephaestus/src/Classes/Triangle/Vertex/: Vertex.hpp
Hephaestus-C/Hephaestus/src/Classes/Vector/: Vector3.cpp  Vector3.hpp
Hephaestus-C/Hephaestus/src/Classes/Window/: Window.cpp  Window.hpp
LowData/: CMakeLists.txt  LowDataGame.hpp  main.cpp
LowData/Characters/: AnimationFlipbook.cpp  AnimationFlipbook.hpp  MainCharacter.cpp  MainCharacter.hpp  Merchant.cpp  Merchant.hpp
LowData/Environment/: EncounterSpace.cpp  EncounterSpace.hpp
LowData/Items/: DroppedItem.hpp  Item.cpp
LowData/Resources/: hub_world.LDataWorld
LowData/Scenes/: GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp
Olympus/: CMakeLists.txt  main.cpp
Olympus/Game/: Player.cpp  Player.hpp
Olympus/Hephaestus/: CMakeLists.txt  Function.hpp  Hephaestus.cpp  Hephaestus.hpp  HephaestusEnums.hpp  HephaestusUtility.hpp
Olympus/Hephaestus/AudioEngine/: AudioEngine.cpp  AudioEngine.hpp  AudioSnippet.cpp  AudioSnippet.hpp
Olympus/Hephaestus/Camera/: Camera.cpp  Camera.hpp
Olympus/Hephaestus/Collision/: Collision.cpp  Collision.hpp  CollisionArea.cpp  CollisionArea.hpp  PhysicsCollision.cpp
Olympus/Hephaestus/Controls/: ControlManager.cpp  ControlManager.hpp
Olympus/Hephaestus/Controls/Keybind/: Keybind.cpp  Keybind.hpp
Olympus/Hephaestus/Scene/: Scene.cpp  Scene.hpp
Olympus/Hephaestus/Shader/: Shader.cpp  Shader.hpp
Olympus/Hephaestus/Sprite/: Sprite.cpp  Sprite.hpp
Olympus/Hephaestus/Sprite/PhysicsSprite/: PhysicsSprite.cpp  PhysicsSprite.hpp
Olympus/Hephaestus/Text/: Text.cpp  Text.hpp  TextManager.cpp  TextManager.hpp
Olympus/Hephaestus/UI/: UIElement.cpp  UIElement.hpp
Olympus/Hephaestus/UI/Button/: Button.cpp  Button.hpp
Olympus/Hephaestus/UI/Image/: Image.cpp  Image.hpp
Olympus/Hephaestus/Window/: Window.cpp  Window.hpp
Olympus/Hephaestus/Window/Camera/: Camera.cpp  Camera.hpp
Olympus/Hephaestus/Window/Collision/: Collision.cpp  Collision.hpp
Olympus/Hephaestus/Window/Controls/: ControlManager.cpp  ControlManager.hpp
Olympus/Hephaestus/Window/Renderer/: RenderObject.cpp  RenderObject.hpp
Olympus/Hephaestus/Window/Sprite/: Sprite.cpp  Sprite.hpp
Olympus/Hephaestus/Window/Sprite/PhysicsSprite/: PhysicsSprite.cpp  PhysicsSprite.hpp
Olympus/Hephaestus/Window/Sprite/PhysicsSprite/Collision/: Collision.cpp  Collision.hpp
Olympus/Hephaestus/Window/Text/: Text.cpp  Text.hpp  TextManager.cpp  TextManager.hpp
Olympus/Hephaestus/Window/UI/: UIElement.cpp  UIElement.hpp
Olympus/Hephaestus/Window/UI/Button/: Button.cpp  Button.hpp
Olympus/Resources/: directory.json
Olympus/Resources/Shaders/Common/: shader.vert
cmake/: install_and_expose.cmake
src/: Hephaestus.cpp
untitled/: main.cpp
(+141 files in other folders)
