cmake_minimum_required(VERSION 3.20)
project(Hephaestus)

set(CMAKE_CXX_STANDARD 14)
# Add header file
set(GLEW_H /usr/local/Cellar/glew/2.2.0/include/GL)
set(GLFW_H /usr/local/Cellar/glfw/3.3.2/include/GLFW)
include_directories(${GLEW_H} ${GLFW_H})

# Add target link
set(GLEW_LINK /usr/local/Cellar/glew/2.2.0/lib/libGLEW.2.2.0.dylib)
set(GLFW_LINK /usr/local/Cellar/glfw/3.3.2/lib/libglfw.3.3.dylib)
link_libraries(${OPENGL} ${GLEW_LINK} ${GLFW_LINK})

include_directories(library)
include_directories(library/glm)
include_directories(library/glm/detail)
include_directories(library/glm/ext)
include_directories(library/glm/gtc)
include_directories(library/glm/gtx)
include_directories(library/glm/simd)
include_directories(src)
include_directories(src/Classes)
include_directories(src/Classes/Controls)
include_directories("src/Classes/Geometry Manager")
include_directories("src/Classes/Geometry Manager/Compressed Data")
include_directories("src/Classes/Geometry Manager/Geometry Buffer")
include_directories("src/Classes/Geometry Manager/Shapes/Cube")
include_directories("src/Classes/Geometry Manager/Shapes/Triangle")
include_directories("src/Classes/Geometry Manager/Sprite")
include_directories("src/Classes/Geometry Manager/Vertex")
include_directories(src/Classes/Shader)
include_directories(src/Classes/Vector)
include_directories("src/Classes/Vector/Vector 2")
include_directories("src/Classes/Vector/Vector 3")
include_directories(src/Classes/Window)
include_directories("src/Third Party")

add_executable(Hephaestus
        library/glm/detail/_features.hpp
        library/glm/detail/_fixes.hpp
        library/glm/detail/_noise.hpp
        library/glm/detail/_swizzle.hpp
        library/glm/detail/_swizzle_func.hpp
        library/glm/detail/_vectorize.hpp
        library/glm/detail/compute_common.hpp
        library/glm/detail/compute_vector_relational.hpp
        library/glm/detail/func_common.inl
        library/glm/detail/func_common_simd.inl
        library/glm/detail/func_exponential.inl
        library/glm/detail/func_exponential_simd.inl
        library/glm/detail/func_geometric.inl
        library/glm/detail/func_geometric_simd.inl
        library/glm/detail/func_integer.inl
        library/glm/detail/func_integer_simd.inl
        library/glm/detail/func_matrix.inl
        library/glm/detail/func_matrix_simd.inl
        library/glm/detail/func_packing.inl
        library/glm/detail/func_packing_simd.inl
        library/glm/detail/func_trigonometric.inl
        library/glm/detail/func_trigonometric_simd.inl
        library/glm/detail/func_vector_relational.inl
        library/glm/detail/func_vector_relational_simd.inl
        library/glm/detail/glm.cpp
        library/glm/detail/qualifier.hpp
        library/glm/detail/setup.hpp
        library/glm/detail/type_float.hpp
        library/glm/detail/type_half.hpp
        library/glm/detail/type_half.inl
        library/glm/detail/type_mat2x2.hpp
        library/glm/detail/type_mat2x2.inl
        library/glm/detail/type_mat2x3.hpp
        library/glm/detail/type_mat2x3.inl
        library/glm/detail/type_mat2x4.hpp
        library/glm/detail/type_mat2x4.inl
        library/glm/detail/type_mat3x2.hpp
        library/glm/detail/type_mat3x2.inl
        library/glm/detail/type_mat3x3.hpp
        library/glm/detail/type_mat3x3.inl
        library/glm/detail/type_mat3x4.hpp
        library/glm/detail/type_mat3x4.inl
        library/glm/detail/type_mat4x2.hpp
        library/glm/detail/type_mat4x2.inl
        library/glm/detail/type_mat4x3.hpp
        library/glm/detail/type_mat4x3.inl
        library/glm/detail/type_mat4x4.hpp
        library/glm/detail/type_mat4x4.inl
        library/glm/detail/type_mat4x4_simd.inl
        library/glm/detail/type_quat.hpp
        library/glm/detail/type_quat.inl
        library/glm/detail/type_quat_simd.inl
        library/glm/detail/type_vec1.hpp
        library/glm/detail/type_vec1.inl
        library/glm/detail/type_vec2.hpp
        library/glm/detail/type_vec2.inl
        library/glm/detail/type_vec3.hpp
        library/glm/detail/type_vec3.inl
        library/glm/detail/type_vec4.hpp
        library/glm/detail/type_vec4.inl
        library/glm/detail/type_vec4_simd.inl
        library/glm/ext/matrix_clip_space.hpp
        library/glm/ext/matrix_clip_space.inl
        library/glm/ext/matrix_common.hpp
        library/glm/ext/matrix_common.inl
        library/glm/ext/matrix_double2x2.hpp
        library/glm/ext/matrix_double2x2_precision.hpp
        library/glm/ext/matrix_double2x3.hpp
        library/glm/ext/matrix_double2x3_precision.hpp
        library/glm/ext/matrix_double2x4.hpp
        library/glm/ext/matrix_double2x4_precision.hpp
        library/glm/ext/matrix_double3x2.hpp
        library/glm/ext/matrix_double3x2_precision.hpp
        library/glm/ext/matrix_double3x3.hpp
        library/glm/ext/matrix_double3x3_precision.hpp
        library/glm/ext/matrix_double3x4.hpp
        library/glm/ext/matrix_double3x4_precision.hpp
        library/glm/ext/matrix_double4x2.hpp
        library/glm/ext/matrix_double4x2_precision.hpp
        library/glm/ext/matrix_double4x3.hpp
        library/glm/ext/matrix_double4x3_precision.hpp
        library/glm/ext/matrix_double4x4.hpp
        library/glm/ext/matrix_double4x4_precision.hpp
        library/glm/ext/matrix_float2x2.hpp
        library/glm/ext/matrix_float2x2_precision.hpp
        library/glm/ext/matrix_float2x3.hpp
        library/glm/ext/matrix_float2x3_precision.hpp
        library/glm/ext/matrix_float2x4.hpp
        library/glm/ext/matrix_float2x4_precision.hpp
        library/glm/ext/matrix_float3x2.hpp
        library/glm/ext/matrix_float3x2_precision.hpp
        library/glm/ext/matrix_float3x3.hpp
        library/glm/ext/matrix_float3x3_precision.hpp
        library/glm/ext/matrix_float3x4.hpp
        library/glm/ext/matrix_float3x4_precision.hpp
        library/glm/ext/matrix_float4x2.hpp
        library/glm/ext/matrix_float4x2_precision.hpp
        library/glm/ext/matrix_float4x3.hpp
        library/glm/ext/matrix_float4x3_precision.hpp
        library/glm/ext/matrix_float4x4.hpp
        library/glm/ext/matrix_float4x4_precision.hpp
        library/glm/ext/matrix_int2x2.hpp
        library/glm/ext/matrix_int2x2_sized.hpp
        library/glm/ext/matrix_int2x3.hpp
        library/glm/ext/matrix_int2x3_sized.hpp
        library/glm/ext/matrix_int2x4.hpp
        library/glm/ext/matrix_int2x4_sized.hpp
        library/glm/ext/matrix_int3x2.hpp
        library/glm/ext/matrix_int3x2_sized.hpp
        library/glm/ext/matrix_int3x3.hpp
        library/glm/ext/matrix_int3x3_sized.hpp
        library/glm/ext/matrix_int3x4.hpp
        library/glm/ext/matrix_int3x4_sized.hpp
        library/glm/ext/matrix_int4x2.hpp
        library/glm/ext/matrix_int4x2_sized.hpp
        library/glm/ext/matrix_int4x3.hpp
        library/glm/ext/matrix_int4x3_sized.hpp
        library/glm/ext/matrix_int4x4.hpp
        library/glm/ext/matrix_int4x4_sized.hpp
        library/glm/ext/matrix_projection.hpp
        library/glm/ext/matrix_projection.inl
        library/glm/ext/matrix_relational.hpp
        library/glm/ext/matrix_relational.inl
        library/glm/ext/matrix_transform.hpp
        library/glm/ext/matrix_transform.inl
        library/glm/ext/matrix_uint2x2.hpp
        library/glm/ext/matrix_uint2x2_sized.hpp
        library/glm/ext/matrix_uint2x3.hpp
        library/glm/ext/matrix_uint2x3_sized.hpp
        library/glm/ext/matrix_uint2x4.hpp
        library/glm/ext/matrix_uint2x4_sized.hpp
        library/glm/ext/matrix_uint3x2.hpp
        library/glm/ext/matrix_uint3x2_sized.hpp
        library/glm/ext/matrix_uint3x3.hpp
        library/glm/ext/matrix_uint3x3_sized.hpp
        library/glm/ext/matrix_uint3x4.hpp
        library/glm/ext/matrix_uint3x4_sized.hpp
        library/glm/ext/matrix_uint4x2.hpp
        library/glm/ext/matrix_uint4x2_sized.hpp
        library/glm/ext/matrix_uint4x3.hpp
        library/glm/ext/matrix_uint4x3_sized.hpp
        library/glm/ext/matrix_uint4x4.hpp
        library/glm/ext/matrix_uint4x4_sized.hpp
        library/glm/ext/quaternion_common.hpp
        library/glm/ext/quaternion_common.inl
        library/glm/ext/quaternion_common_simd.inl
        library/glm/ext/quaternion_double.hpp
        library/glm/ext/quaternion_double_precision.hpp
        library/glm/ext/quaternion_exponential.hpp
        library/glm/ext/quaternion_exponential.inl
        library/glm/ext/quaternion_float.hpp
        library/glm/ext/quaternion_float_precision.hpp
        library/glm/ext/quaternion_geometric.hpp
        library/glm/ext/quaternion_geometric.inl
        library/glm/ext/quaternion_relational.hpp
        library/glm/ext/quaternion_relational.inl
        library/glm/ext/quaternion_transform.hpp
        library/glm/ext/quaternion_transform.inl
        library/glm/ext/quaternion_trigonometric.hpp
        library/glm/ext/quaternion_trigonometric.inl
        library/glm/ext/scalar_common.hpp
        library/glm/ext/scalar_common.inl
        library/glm/ext/scalar_constants.hpp
        library/glm/ext/scalar_constants.inl
        library/glm/ext/scalar_int_sized.hpp
        library/glm/ext/scalar_integer.hpp
        library/glm/ext/scalar_integer.inl
        library/glm/ext/scalar_packing.hpp
        library/glm/ext/scalar_packing.inl
        library/glm/ext/scalar_relational.hpp
        library/glm/ext/scalar_relational.inl
        library/glm/ext/scalar_uint_sized.hpp
        library/glm/ext/scalar_ulp.hpp
        library/glm/ext/scalar_ulp.inl
        library/glm/ext/vector_bool1.hpp
        library/glm/ext/vector_bool1_precision.hpp
        library/glm/ext/vector_bool2.hpp
        library/glm/ext/vector_bool2_precision.hpp
        library/glm/ext/vector_bool3.hpp
        library/glm/ext/vector_bool3_precision.hpp
        library/glm/ext/vector_bool4.hpp
        library/glm/ext/vector_bool4_precision.hpp
        library/glm/ext/vector_common.hpp
        library/glm/ext/vector_common.inl
        library/glm/ext/vector_double1.hpp
        library/glm/ext/vector_double1_precision.hpp
        library/glm/ext/vector_double2.hpp
        library/glm/ext/vector_double2_precision.hpp
        library/glm/ext/vector_double3.hpp
        library/glm/ext/vector_double3_precision.hpp
        library/glm/ext/vector_double4.hpp
        library/glm/ext/vector_double4_precision.hpp
        library/glm/ext/vector_float1.hpp
        library/glm/ext/vector_float1_precision.hpp
        library/glm/ext/vector_float2.hpp
        library/glm/ext/vector_float2_precision.hpp
        library/glm/ext/vector_float3.hpp
        library/glm/ext/vector_float3_precision.hpp
        library/glm/ext/vector_float4.hpp
        library/glm/ext/vector_float4_precision.hpp
        library/glm/ext/vector_int1.hpp
        library/glm/ext/vector_int1_sized.hpp
        library/glm/ext/vector_int2.hpp
        library/glm/ext/vector_int2_sized.hpp
        library/glm/ext/vector_int3.hpp
        library/glm/ext/vector_int3_sized.hpp
        library/glm/ext/vector_int4.hpp
        library/glm/ext/vector_int4_sized.hpp
        library/glm/ext/vector_integer.hpp
        library/glm/ext/vector_integer.inl
        library/glm/ext/vector_packing.hpp
        library/glm/ext/vector_packing.inl
        library/glm/ext/vector_relational.hpp
        library/glm/ext/vector_relational.inl
        library/glm/ext/vector_uint1.hpp
        library/glm/ext/vector_uint1_sized.hpp
        library/glm/ext/vector_uint2.hpp
        library/glm/ext/vector_uint2_sized.hpp
        library/glm/ext/vector_uint3.hpp
        library/glm/ext/vector_uint3_sized.hpp
        library/glm/ext/vector_uint4.hpp
        library/glm/ext/vector_uint4_sized.hpp
        library/glm/ext/vector_ulp.hpp
        library/glm/ext/vector_ulp.inl
        library/glm/gtc/bitfield.hpp
        library/glm/gtc/bitfield.inl
        library/glm/gtc/color_space.hpp
        library/glm/gtc/color_space.inl
        library/glm/gtc/constants.hpp
        library/glm/gtc/constants.inl
        library/glm/gtc/epsilon.hpp
        library/glm/gtc/epsilon.inl
        library/glm/gtc/integer.hpp
        library/glm/gtc/integer.inl
        library/glm/gtc/matrix_access.hpp
        library/glm/gtc/matrix_access.inl
        library/glm/gtc/matrix_integer.hpp
        library/glm/gtc/matrix_inverse.hpp
        library/glm/gtc/matrix_inverse.inl
        library/glm/gtc/matrix_transform.hpp
        library/glm/gtc/matrix_transform.inl
        library/glm/gtc/noise.hpp
        library/glm/gtc/noise.inl
        library/glm/gtc/packing.hpp
        library/glm/gtc/packing.inl
        library/glm/gtc/quaternion.hpp
        library/glm/gtc/quaternion.inl
        library/glm/gtc/quaternion_simd.inl
        library/glm/gtc/random.hpp
        library/glm/gtc/random.inl
        library/glm/gtc/reciprocal.hpp
        library/glm/gtc/reciprocal.inl
        library/glm/gtc/round.hpp
        library/glm/gtc/round.inl
        library/glm/gtc/type_aligned.hpp
        library/glm/gtc/type_precision.hpp
        library/glm/gtc/type_precision.inl
        library/glm/gtc/type_ptr.hpp
        library/glm/gtc/type_ptr.inl
        library/glm/gtc/ulp.hpp
        library/glm/gtc/ulp.inl
        library/glm/gtc/vec1.hpp
        library/glm/gtx/associated_min_max.hpp
        library/glm/gtx/associated_min_max.inl
        library/glm/gtx/bit.hpp
        library/glm/gtx/bit.inl
        library/glm/gtx/closest_point.hpp
        library/glm/gtx/closest_point.inl
        library/glm/gtx/color_encoding.hpp
        library/glm/gtx/color_encoding.inl
        library/glm/gtx/color_space.hpp
        library/glm/gtx/color_space.inl
        library/glm/gtx/color_space_YCoCg.hpp
        library/glm/gtx/color_space_YCoCg.inl
        library/glm/gtx/common.hpp
        library/glm/gtx/common.inl
        library/glm/gtx/compatibility.hpp
        library/glm/gtx/compatibility.inl
        library/glm/gtx/component_wise.hpp
        library/glm/gtx/component_wise.inl
        library/glm/gtx/dual_quaternion.hpp
        library/glm/gtx/dual_quaternion.inl
        library/glm/gtx/easing.hpp
        library/glm/gtx/easing.inl
        library/glm/gtx/euler_angles.hpp
        library/glm/gtx/euler_angles.inl
        library/glm/gtx/extend.hpp
        library/glm/gtx/extend.inl
        library/glm/gtx/extended_min_max.hpp
        library/glm/gtx/extended_min_max.inl
        library/glm/gtx/exterior_product.hpp
        library/glm/gtx/exterior_product.inl
        library/glm/gtx/fast_exponential.hpp
        library/glm/gtx/fast_exponential.inl
        library/glm/gtx/fast_square_root.hpp
        library/glm/gtx/fast_square_root.inl
        library/glm/gtx/fast_trigonometry.hpp
        library/glm/gtx/fast_trigonometry.inl
        library/glm/gtx/float_notmalize.inl
        library/glm/gtx/functions.hpp
        library/glm/gtx/functions.inl
        library/glm/gtx/gradient_paint.hpp
        library/glm/gtx/gradient_paint.inl
        library/glm/gtx/handed_coordinate_space.hpp
        library/glm/gtx/handed_coordinate_space.inl
        library/glm/gtx/hash.hpp
        library/glm/gtx/hash.inl
        library/glm/gtx/integer.hpp
        library/glm/gtx/integer.inl
        library/glm/gtx/intersect.hpp
        library/glm/gtx/intersect.inl
        library/glm/gtx/io.hpp
        library/glm/gtx/io.inl
        library/glm/gtx/log_base.hpp
        library/glm/gtx/log_base.inl
        library/glm/gtx/matrix_cross_product.hpp
        library/glm/gtx/matrix_cross_product.inl
        library/glm/gtx/matrix_decompose.hpp
        library/glm/gtx/matrix_decompose.inl
        library/glm/gtx/matrix_factorisation.hpp
        library/glm/gtx/matrix_factorisation.inl
        library/glm/gtx/matrix_interpolation.hpp
        library/glm/gtx/matrix_interpolation.inl
        library/glm/gtx/matrix_major_storage.hpp
        library/glm/gtx/matrix_major_storage.inl
        library/glm/gtx/matrix_operation.hpp
        library/glm/gtx/matrix_operation.inl
        library/glm/gtx/matrix_query.hpp
        library/glm/gtx/matrix_query.inl
        library/glm/gtx/matrix_transform_2d.hpp
        library/glm/gtx/matrix_transform_2d.inl
        library/glm/gtx/mixed_product.hpp
        library/glm/gtx/mixed_product.inl
        library/glm/gtx/norm.hpp
        library/glm/gtx/norm.inl
        library/glm/gtx/normal.hpp
        library/glm/gtx/normal.inl
        library/glm/gtx/normalize_dot.hpp
        library/glm/gtx/normalize_dot.inl
        library/glm/gtx/number_precision.hpp
        library/glm/gtx/number_precision.inl
        library/glm/gtx/optimum_pow.hpp
        library/glm/gtx/optimum_pow.inl
        library/glm/gtx/orthonormalize.hpp
        library/glm/gtx/orthonormalize.inl
        library/glm/gtx/perpendicular.hpp
        library/glm/gtx/perpendicular.inl
        library/glm/gtx/polar_coordinates.hpp
        library/glm/gtx/polar_coordinates.inl
        library/glm/gtx/projection.hpp
        library/glm/gtx/projection.inl
        library/glm/gtx/quaternion.hpp
        library/glm/gtx/quaternion.inl
        library/glm/gtx/range.hpp
        library/glm/gtx/raw_data.hpp
        library/glm/gtx/raw_data.inl
        library/glm/gtx/rotate_normalized_axis.hpp
        library/glm/gtx/rotate_normalized_axis.inl
        library/glm/gtx/rotate_vector.hpp
        library/glm/gtx/rotate_vector.inl
        library/glm/gtx/scalar_multiplication.hpp
        library/glm/gtx/scalar_relational.hpp
        library/glm/gtx/scalar_relational.inl
        library/glm/gtx/spline.hpp
        library/glm/gtx/spline.inl
        library/glm/gtx/std_based_type.hpp
        library/glm/gtx/std_based_type.inl
        library/glm/gtx/string_cast.hpp
        library/glm/gtx/string_cast.inl
        library/glm/gtx/texture.hpp
        library/glm/gtx/texture.inl
        library/glm/gtx/transform.hpp
        library/glm/gtx/transform.inl
        library/glm/gtx/transform2.hpp
        library/glm/gtx/transform2.inl
        library/glm/gtx/type_aligned.hpp
        library/glm/gtx/type_aligned.inl
        library/glm/gtx/type_trait.hpp
        library/glm/gtx/type_trait.inl
        library/glm/gtx/vec_swizzle.hpp
        library/glm/gtx/vector_angle.hpp
        library/glm/gtx/vector_angle.inl
        library/glm/gtx/vector_query.hpp
        library/glm/gtx/vector_query.inl
        library/glm/gtx/wrap.hpp
        library/glm/gtx/wrap.inl
        library/glm/simd/common.h
        library/glm/simd/exponential.h
        library/glm/simd/geometric.h
        library/glm/simd/integer.h
        library/glm/simd/matrix.h
        library/glm/simd/neon.h
        library/glm/simd/packing.h
        library/glm/simd/platform.h
        library/glm/simd/trigonometric.h
        library/glm/simd/vector_relational.h
        library/glm/common.hpp
        library/glm/exponential.hpp
        library/glm/ext.hpp
        library/glm/fwd.hpp
        library/glm/geometric.hpp
        library/glm/glm.hpp
        library/glm/integer.hpp
        library/glm/mat2x2.hpp
        library/glm/mat2x3.hpp
        library/glm/mat2x4.hpp
        library/glm/mat3x2.hpp
        library/glm/mat3x3.hpp
        library/glm/mat3x4.hpp
        library/glm/mat4x2.hpp
        library/glm/mat4x3.hpp
        library/glm/mat4x4.hpp
        library/glm/matrix.hpp
        library/glm/packing.hpp
        library/glm/trigonometric.hpp
        library/glm/vec2.hpp
        library/glm/vec3.hpp
        library/glm/vec4.hpp
        library/glm/vector_relational.hpp
        src/Classes/Controls/Controls.cpp
        src/Classes/Controls/Controls.hpp
        "src/Classes/Geometry Manager/Compressed Data/CompressedData.cpp"
        "src/Classes/Geometry Manager/Compressed Data/CompressedData.hpp"
        "src/Classes/Geometry Manager/Geometry Buffer/GeometryBuffer.cpp"
        "src/Classes/Geometry Manager/Geometry Buffer/GeometryBuffer.hpp"
        "src/Classes/Geometry Manager/Shapes/Cube/Cube.cpp"
        "src/Classes/Geometry Manager/Shapes/Cube/Cube.hpp"
        "src/Classes/Geometry Manager/Shapes/Triangle/Triangle.cpp"
        "src/Classes/Geometry Manager/Shapes/Triangle/Triangle.hpp"
        "src/Classes/Geometry Manager/Sprite/Sprite.cpp"
        "src/Classes/Geometry Manager/Sprite/Sprite.hpp"
        "src/Classes/Geometry Manager/Vertex/Vertex.cpp"
        "src/Classes/Geometry Manager/Vertex/Vertex.hpp"
        "src/Classes/Geometry Manager/GeometryManager.cpp"
        "src/Classes/Geometry Manager/GeometryManager.hpp"
        src/Classes/Shader/Shader.cpp
        src/Classes/Shader/Shader.hpp
        "src/Classes/Vector/Vector 2/Vector2.cpp"
        "src/Classes/Vector/Vector 2/Vector2.hpp"
        "src/Classes/Vector/Vector 3/Vector3.cpp"
        "src/Classes/Vector/Vector 3/Vector3.hpp"
        src/Classes/Window/Window.cpp
        src/Classes/Window/Window.hpp
        "src/Third Party/stb_image.h"
        src/main.cpp)
